Fix image spacing and rounding on blog post

--- a/components/blog/Slug.module.css
+++ b/components/blog/Slug.module.css
@@ -38,6 +38,11 @@
   
 }
 
+.blogpost figure img {
+  @apply w-full mb-2 rounded-lg;
+  
+}
+
 
 
 .blogpost h1 {
